# uf_decoder

./: README.md  meson.build
.github/workflows/: ci.yml
examples/: example_2d_toric.c  example_2d_toric_decode.c  example_2d_toric_decode_and_analyze.c  example_2d_toric_decode_and_analyze_ldpc.c  example_2d_toric_decode_erasure.c  example_2d_toric_decode_ldpc.c  example_2d_toric_decode_speed.c  example_2d_toric_triangular.c  example_2d_toric_triangular_decode_erasure.c
inc/: decoder_ldpc.h  decoder_main.h  global.h  graph_construction.h  graph_type.h  percolation_main.h  stabilizer_main.h
py_wrapper/: bench_decoder.py  bench_decoder_analysis.py  compare_with_others.py  example_bb_codes.py  example_hgp_codes.py  example_surface_code.py  example_surface_code_simulate.py  example_toric_code.py  py_decoder.py  run_from_py.py  simulation_run.py  some_codes.py  test_bb_codes.py  test_surface_code.py  test_toric_code.py
src/: decoder_ldpc.c  decoder_main.c  graph_construction.c  graph_type.c  percolation_main.c  stabilizer_main.c
tests/: logical_errors.c  meson.build  toric2d_square_alg1.c  toric2d_square_alg2.c  toric2d_square_alg4.c  toric2d_square_ldpc.c  toric2d_triangular_alg1.c  toric2d_triangular_alg2.c  toric2d_triangular_alg4.c  toric2d_triangular_ldpc.c  toric_2d_square.c  toric_2d_square_alg1.c  toric_2d_square_alg2.c  toric_2d_square_alg3.c  toric_2d_square_bfs_only.c  toric_2d_square_ldpc.c  toric_2d_square_skip_store_root.c  toric_2d_triangular.c  toric_2d_triangular_alg1.c  toric_2d_triangular_alg2.c  toric_2d_triangular_alg3.c
